# simple-api-jobs

./: .env  .gitignore  README.md  db.sqlite3  pyproject.toml
core/: settings.py  urls.py
jobs/: models.py  serializers.py  urls.py  views.py
jobs/migrations/: 0001_initial.py
skills/: admin.py  models.py  serializers.py  temp.py  urls.py  views.py
skills/migrations/: 0001_initial.py
